Ignore visual studio extensions .aps, .db and .opendb. Rename terminate to nethack_terminate to avoid conflict with CRT. Added visual studio 2015 build support.

--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,8 @@ Makefile.gcc-orig
 *.ilk
 # VS2013 extension to auto-whine about questionable code generates these
 *.lastcodeanalysissucceeded
+*.aps
+*.db
+*.opendb
 # Win32-specific ignores end
 
