Added nh340key and nhraykey projects.

--- a/sys/win10/nh340key.vcxproj
+++ b/sys/win10/nh340key.vcxproj
@@ -11,12 +11,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="$(SysWinntDir)nhdefkey.c" />
+    <ClCompile Include="$(SysWinntDir)nh340key.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{C391E5AA-7AB2-4C3C-810F-A19801B434BE}</ProjectGuid>
+    <ProjectGuid>{b9257b7f-74c2-4fc4-9656-d9aee403f7ce}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>nhdefkey</RootNamespace>
+    <RootNamespace>nh340key</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
