--- a/win/win32/vs2017/NetHackW.vcxproj
+++ b/win/win32/vs2017/NetHackW.vcxproj
@@ -20,7 +20,7 @@
       <Optimization>Disabled</Optimization>
       <OmitFramePointers>true</OmitFramePointers>
       <AdditionalIncludeDirectories>$(WinWin32Dir);$(IncDir);$(SysWinntDir);$(SysShareDir);$(WinShareDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>TILES;_WINDOWS;DLB;MSWIN_GRAPHICS;WIN32CONNDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>TILES;_WINDOWS;DLB;MSWIN_GRAPHICS;ENGINE_IMPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -28,131 +28,12 @@
     </ResourceCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>comctl32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>comctl32.lib;winmm.lib;$(BinDir)engine.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="$(SrcDir)allmain.c" />
-    <ClCompile Include="$(SrcDir)alloc.c" />
-    <ClCompile Include="$(SrcDir)apply.c" />
-    <ClCompile Include="$(SrcDir)artifact.c" />
-    <ClCompile Include="$(SrcDir)attrib.c" />
-    <ClCompile Include="$(SrcDir)ball.c" />
-    <ClCompile Include="$(SrcDir)bones.c" />
-    <ClCompile Include="$(SrcDir)botl.c" />
-    <ClCompile Include="$(SrcDir)cmd.c" />
-    <ClCompile Include="$(SrcDir)dbridge.c" />
-    <ClCompile Include="$(SrcDir)decl.c" />
-    <ClCompile Include="$(SrcDir)detect.c" />
-    <ClCompile Include="$(SrcDir)dig.c" />
-    <ClCompile Include="$(SrcDir)display.c" />
-    <ClCompile Include="$(SrcDir)dlb.c" />
-    <ClCompile Include="$(SrcDir)do.c" />
-    <ClCompile Include="$(SrcDir)dog.c" />
-    <ClCompile Include="$(SrcDir)dogmove.c" />
-    <ClCompile Include="$(SrcDir)dokick.c" />
-    <ClCompile Include="$(SrcDir)dothrow.c" />
-    <ClCompile Include="$(SrcDir)do_name.c" />
-    <ClCompile Include="$(SrcDir)do_wear.c" />
-    <ClCompile Include="$(SrcDir)drawing.c" />
-    <ClCompile Include="$(SrcDir)dungeon.c" />
-    <ClCompile Include="$(SrcDir)eat.c" />
-    <ClCompile Include="$(SrcDir)end.c" />
-    <ClCompile Include="$(SrcDir)engrave.c" />
-    <ClCompile Include="$(SrcDir)exper.c" />
-    <ClCompile Include="$(SrcDir)explode.c" />
-    <ClCompile Include="$(SrcDir)extralev.c" />
-    <ClCompile Include="$(SrcDir)files.c" />
-    <ClCompile Include="$(SrcDir)fountain.c" />
-    <ClCompile Include="$(SrcDir)hack.c" />
     <ClCompile Include="$(SrcDir)hacklib.c" />
-    <ClCompile Include="$(SrcDir)invent.c" />
-    <ClCompile Include="$(SrcDir)light.c" />
-    <ClCompile Include="$(SrcDir)lock.c" />
-    <ClCompile Include="$(SrcDir)mail.c" />
-    <ClCompile Include="$(SrcDir)makemon.c" />
-    <ClCompile Include="$(SrcDir)mapglyph.c" />
-    <ClCompile Include="$(SrcDir)mcastu.c" />
-    <ClCompile Include="$(SrcDir)mhitm.c" />
-    <ClCompile Include="$(SrcDir)mhitu.c" />
-    <ClCompile Include="$(SrcDir)minion.c" />
-    <ClCompile Include="$(SrcDir)mklev.c" />
-    <ClCompile Include="$(SrcDir)mkmap.c" />
-    <ClCompile Include="$(SrcDir)mkmaze.c" />
-    <ClCompile Include="$(SrcDir)mkobj.c" />
-    <ClCompile Include="$(SrcDir)mkroom.c" />
-    <ClCompile Include="$(SrcDir)mon.c" />
-    <ClCompile Include="$(SrcDir)mondata.c" />
-    <ClCompile Include="$(SrcDir)monmove.c" />
-    <ClCompile Include="$(SrcDir)monst.c" />
-    <ClCompile Include="$(SrcDir)monstr.c" />
-    <ClCompile Include="$(SrcDir)mplayer.c" />
-    <ClCompile Include="$(SrcDir)mthrowu.c" />
-    <ClCompile Include="$(SrcDir)muse.c" />
-    <ClCompile Include="$(SrcDir)music.c" />
-    <ClCompile Include="$(SrcDir)objects.c" />
-    <ClCompile Include="$(SrcDir)objnam.c" />
-    <ClCompile Include="$(SrcDir)options.c" />
-    <ClCompile Include="$(SrcDir)o_init.c" />
-    <ClCompile Include="$(SrcDir)pager.c" />
-    <ClCompile Include="$(SrcDir)pickup.c" />
-    <ClCompile Include="$(SrcDir)pline.c" />
-    <ClCompile Include="$(SrcDir)polyself.c" />
-    <ClCompile Include="$(SrcDir)potion.c" />
-    <ClCompile Include="$(SrcDir)pray.c" />
-    <ClCompile Include="$(SrcDir)priest.c" />
-    <ClCompile Include="$(SrcDir)quest.c" />
-    <ClCompile Include="$(SrcDir)questpgr.c" />
-    <ClCompile Include="$(SrcDir)read.c" />
-    <ClCompile Include="$(SrcDir)rect.c" />
-    <ClCompile Include="$(SrcDir)region.c" />
-    <ClCompile Include="$(SrcDir)restore.c" />
-    <ClCompile Include="$(SrcDir)rip.c" />
-    <ClCompile Include="$(SrcDir)rnd.c" />
-    <ClCompile Include="$(SrcDir)role.c" />
-    <ClCompile Include="$(SrcDir)rumors.c" />
-    <ClCompile Include="$(SrcDir)save.c" />
-    <ClCompile Include="$(SrcDir)shk.c" />
-    <ClCompile Include="$(SrcDir)shknam.c" />
-    <ClCompile Include="$(SrcDir)sit.c" />
-    <ClCompile Include="$(SrcDir)sounds.c" />
-    <ClCompile Include="$(SrcDir)spell.c" />
-    <ClCompile Include="$(SrcDir)sp_lev.c" />
-    <ClCompile Include="$(SrcDir)steal.c" />
-    <ClCompile Include="$(SrcDir)steed.c" />
-    <ClCompile Include="$(SrcDir)sys.c" />
-    <ClCompile Include="$(SrcDir)teleport.c" />
-    <ClCompile Include="$(SrcDir)tile.c" />
-    <ClCompile Include="$(SrcDir)timeout.c" />
-    <ClCompile Include="$(SrcDir)topten.c" />
-    <ClCompile Include="$(SrcDir)track.c" />
-    <ClCompile Include="$(SrcDir)trap.c" />
-    <ClCompile Include="$(SrcDir)uhitm.c" />
-    <ClCompile Include="$(SrcDir)u_init.c" />
-    <ClCompile Include="$(SrcDir)vault.c" />
-    <ClCompile Include="$(SrcDir)version.c" />
-    <ClCompile Include="$(SrcDir)vision.c" />
     <ClCompile Include="$(SrcDir)vis_tab.c" />
-    <ClCompile Include="$(SrcDir)weapon.c" />
-    <ClCompile Include="$(SrcDir)were.c" />
-    <ClCompile Include="$(SrcDir)wield.c" />
-    <ClCompile Include="$(SrcDir)windows.c" />
-    <ClCompile Include="$(SrcDir)wizard.c" />
-    <ClCompile Include="$(SrcDir)worm.c" />
-    <ClCompile Include="$(SrcDir)worn.c" />
-    <ClCompile Include="$(SrcDir)write.c" />
-    <ClCompile Include="$(SrcDir)zap.c" />
-    <ClCompile Include="$(SysShareDir)cppregex.cpp" />
-    <ClCompile Include="$(SysShareDir)nhlan.c" />
-    <ClCompile Include="$(SysShareDir)pcmain.c" />
-    <ClCompile Include="$(SysShareDir)pcsys.c" />
-    <ClCompile Include="$(SysShareDir)pcunix.c" />
-    <ClCompile Include="$(SysShareDir)random.c" />
-    <ClCompile Include="$(SysWinntDir)ntsound.c" />
-    <ClCompile Include="$(SysWinntDir)stubs.c">
-      <PreprocessorDefinitions>TTYSTUB;</PreprocessorDefinitions>
-    </ClCompile>
-    <ClCompile Include="$(SysWinntDir)winnt.c" />
     <ClCompile Include="$(WinWin32Dir)mhaskyn.c" />
     <ClCompile Include="$(WinWin32Dir)mhdlg.c" />
     <ClCompile Include="$(WinWin32Dir)mhfont.c" />
