Additional changes to player selection dialog.

--- a/win/win32/winhack.rc
+++ b/win/win32/winhack.rc
@@ -159,27 +159,27 @@ BEGIN
     LISTBOX         IDC_EXTCMD_LIST,7,7,65,103,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_PLAYER_SELECTOR DIALOGEX 0, 0, 217, 179
+IDD_PLAYER_SELECTOR DIALOGEX 0, 0, 225, 212
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "What are you?"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "Play",IDOK,12,156,54,14
-    PUSHBUTTON      "Quit",IDCANCEL,150,156,54,14
+    DEFPUSHBUTTON   "Play",IDOK,12,192,54,14
+    PUSHBUTTON      "Quit",IDCANCEL,162,192,54,14
     EDITTEXT        IDC_PLSEL_NAME,12,12,105,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
-    CONTROL         "Neutral",IDC_PLSEL_ALIGN_NEUTRAL,"Button",BS_AUTORADIOBUTTON,156,60,37,10
-    CONTROL         "Lawful",IDC_PLSEL_ALIGN_LAWFUL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,156,48,35,10
-    CONTROL         "Chaotic",IDC_PLSEL_ALIGN_CHAOTIC,"Button",BS_AUTORADIOBUTTON,156,72,38,10
-    CONTROL         "Male",IDC_PLSEL_GENDER_MALE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,156,108,30,10
-    CONTROL         "Female",IDC_PLSEL_GENDER_FEMALE,"Button",BS_AUTORADIOBUTTON,156,120,38,10
-    LISTBOX         IDC_PLSEL_RACE_LIST,84,48,54,96,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    LISTBOX         IDC_PLSEL_ROLE_LIST,12,48,54,96,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Alignment",IDC_STATIC,150,36,48,54
-    GROUPBOX        "Gender",IDC_STATIC,150,96,48,42
-    GROUPBOX        "Role",IDC_STATIC,6,36,66,114
-    GROUPBOX        "Race",IDC_STATIC,78,36,66,114
-    PUSHBUTTON      "Random",IDC_PLSEL_RANDOM,84,156,54,14
+    CONTROL         "Neutral",IDC_PLSEL_ALIGN_NEUTRAL,"Button",BS_AUTORADIOBUTTON,168,60,37,10
+    CONTROL         "Lawful",IDC_PLSEL_ALIGN_LAWFUL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,168,48,35,10
+    CONTROL         "Chaotic",IDC_PLSEL_ALIGN_CHAOTIC,"Button",BS_AUTORADIOBUTTON,168,72,38,10
+    CONTROL         "Male",IDC_PLSEL_GENDER_MALE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,168,108,30,10
+    CONTROL         "Female",IDC_PLSEL_GENDER_FEMALE,"Button",BS_AUTORADIOBUTTON,168,120,38,10
+    GROUPBOX        "Alignment",IDC_STATIC,162,36,48,54
+    GROUPBOX        "Gender",IDC_STATIC,162,96,48,42
+    GROUPBOX        "Role",IDC_STATIC,6,36,72,150
+    GROUPBOX        "Race",IDC_STATIC,84,36,72,72
+    PUSHBUTTON      "Random",IDC_PLSEL_RANDOM,90,192,54,14
     GROUPBOX        "Name",IDC_STATIC,6,0,120,30
+    CONTROL         "",IDC_PLSEL_ROLE_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_OWNERDRAWFIXED | LVS_ALIGNLEFT | LVS_NOSCROLL | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,12,48,60,130
+    CONTROL         "",IDC_PLSEL_RACE_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_OWNERDRAWFIXED | LVS_ALIGNLEFT | LVS_NOSCROLL | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,90,48,60,51
 END
 
 IDD_NHRIP DIALOGEX 0, 0, 281, 209
@@ -291,9 +291,9 @@ BEGIN
     IDD_PLAYER_SELECTOR, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 210
+        RIGHTMARGIN, 218
         TOPMARGIN, 7
-        BOTTOMMARGIN, 172
+        BOTTOMMARGIN, 205
     END
 
     IDD_NHRIP, DIALOG
