--- a/sys/vms/Makefile.dat
+++ b/sys/vms/Makefile.dat
@@ -23,13 +23,13 @@ TILE2X11 = $(UTL)tile2x11.exe;
 UTILMARKER = $(UTL)util.timestamp;
 
 # note: filespecs have enough punctuation to satisfy DELETE
-MARKERS = spec_levs.timestamp;,quest_levs.timestamp; 
+MARKERS = spec_levs.timestamp;,quest_levs.timestamp;
 VARDAT	= data.;,rumors.;,quest.dat;,oracles.;,options.;
 DUNGEON = dungeon.;
 X11TILES= x11tiles.;
 # note: the level lists need to be space separated
-QUESTLEVS = Arch.des Barb.des Caveman.des Healer.des Knight.des \
-	Monk.des Priest.des Ranger.des Rogue.des Samurai.des Tourist.des \
+QUESTLEVS = Arch.des Barb.des Caveman.des Cartomancer.des Healer.des \
+	Knight.des Monk.des Priest.des Ranger.des Rogue.des Samurai.des Tourist.des \
 	Valkyrie.des Wizard.des
 SPECLEVS  = bigroom.des castle.des endgame.des gehennom.des knox.des \
 	medusa.des mines.des oracle.des sokoban.des tower.des yendor.des
