--- a/sys/os2/Makefile.os2
+++ b/sys/os2/Makefile.os2
@@ -2,6 +2,8 @@
 #	OS/2 NetHack 3.6 Makefile for OS/2 versions 1.x and 2.x
 #	Copyright (C) 1990, 1991, 1992, 1993, 1996 Timo Hakulinen
 #
+# Edited 2/01/18 by NullCGT
+#
 #	Several compilers exist for OS/2 but, currently only GCC emx is tested
 #	and used for releases.  make programs other than dmake are not tested.
 #
