Fixed oopses, made yellow sign worse

--- a/sys/os2/Makefile.os2
+++ b/sys/os2/Makefile.os2
@@ -2,7 +2,7 @@
 #	OS/2 NetHack 3.6 Makefile for OS/2 versions 1.x and 2.x
 #	Copyright (C) 1990, 1991, 1992, 1993, 1996 Timo Hakulinen
 #
-# Edited 2/15/18 by NullCGT
+# Edited 2/23/18 by NullCGT
 #
 #	Several compilers exist for OS/2 but, currently only GCC emx is tested
 #	and used for releases.  make programs other than dmake are not tested.
@@ -1395,6 +1395,8 @@ $(BFILES) : $(DAT)\Barb.des $(TEMP)\lev_comp.exe
 	$(MAKEB) QQ=Bar QF=Barb do_quest
 $(CFILES) : $(DAT)\Caveman.des $(TEMP)\lev_comp.exe
 	$(MAKEB) QQ=Cav QF=Caveman do_quest
+$(CFILES) : $(DAT)\Cartomancer.des $(TEMP)\lev_comp.exe
+	$(MAKEB) QQ=Cav QF=Cartomancer do_quest
 $(HFILES) : $(DAT)\Healer.des $(TEMP)\lev_comp.exe
 	$(MAKEB) QQ=Hea QF=Healer do_quest
 $(KFILES) : $(DAT)\Knight.des $(TEMP)\lev_comp.exe
