--- a/sys/msdos/Makefile.GCC
+++ b/sys/msdos/Makefile.GCC
@@ -2,7 +2,7 @@
 #	Copyright (c) NetHack PC Development Team 1996-2006.
 #	PC NetHack 3.6 Makefile for djgpp V2
 #
-# Edited on 2/15/18 by NullCGT
+# Edited on 3/1/18 by NullCGT
 #
 #	Gnu gcc compiler for msdos (djgpp)
 #	Requires Gnu Make utility (V3.79.1 or greater) supplied with djgpp
@@ -964,7 +964,7 @@ $(O)sp_lev.tag: $(O)utility.tag $(DAT)/bigroom.des  $(DAT)/castle.des \
 	$(DAT)/monk.des      $(DAT)/priest.des   $(DAT)/ranger.des \
 	$(DAT)/rogue.des     $(DAT)/samurai.des  $(DAT)/tourist.des \
 	$(DAT)/valkyrie.des  $(DAT)/wizard.des $(DAT)/cartomancer.des \
-	$(DAT)/void.des
+	$(DAT)/void.des      $(DAT)/statuary.des
 	@$(subst /,\,cd $(DAT))
 	@$(subst /,\,$(U)lev_comp bigroom.des)
 	@$(subst /,\,$(U)lev_comp castle.des)
@@ -975,7 +975,9 @@ $(O)sp_lev.tag: $(O)utility.tag $(DAT)/bigroom.des  $(DAT)/castle.des \
 	@$(subst /,\,$(U)lev_comp medusa.des)
 	@$(subst /,\,$(U)lev_comp oracle.des)
 	@$(subst /,\,$(U)lev_comp sokoban.des)
+	@$(subst /,\,$(U)lev_comp statuary.des)
 	@$(subst /,\,$(U)lev_comp tower.des)
+	@$(subst /,\,$(U)lev_comp void.des)
 	@$(subst /,\,$(U)lev_comp yendor.des)
 	@$(subst /,\,$(U)lev_comp arch.des)
 	@$(subst /,\,$(U)lev_comp barb.des)
@@ -991,7 +993,6 @@ $(O)sp_lev.tag: $(O)utility.tag $(DAT)/bigroom.des  $(DAT)/castle.des \
 	@$(subst /,\,$(U)lev_comp tourist.des)
 	@$(subst /,\,$(U)lev_comp valkyrie.des)
 	@$(subst /,\,$(U)lev_comp wizard.des)
-	@$(subst /,\,$(U)lev_comp void.des)
 	@$(subst /,\,cd $(SRC))
 	@$(subst /,\,echo sp_levs done > $@)
 
