--- a/sys/msdos/Makefile.MSC
+++ b/sys/msdos/Makefile.MSC
@@ -2,7 +2,7 @@
 #	Copyright (c) NetHack PC Development Team 1997 - 2012.
 #	PC NetHack 3.4x Makefile for MSC V1.52c (16 bit compiler)
 #
-# Edited 2/15/18 by NullCGT
+# Edited 3/1/18 by NullCGT
 #
 #	For questions or comments: nethack-bugs@nethack.org
 #
@@ -151,7 +151,7 @@ SPLEVDES = $(DAT)\Arch.des $(DAT)\Barb.des $(DAT)\bigroom.des \
 	$(DAT)\Ranger.des $(DAT)\Rogue.des $(DAT)\Samurai.des \
 	$(DAT)\Tourist.des $(DAT)\tower.des $(DAT)\Valkyrie.des \
 	$(DAT)\Wizard.des $(DAT)\yendor.des $(DAT)\Cartomancer.des \
-	$(DAT)\void.des
+	$(DAT)\void.des   $(DAT)\statuary.des
 
 VGAOBJ      = vidvga.o
 
@@ -425,7 +425,9 @@ $(O)sp_lev.tag: $(O)utility.tag $(SPLEVDES)
 	$(U)lev_comp medusa.des
 	$(U)lev_comp oracle.des
 	$(U)lev_comp sokoban.des
+	$(U)lev_comp statuary.des
 	$(U)lev_comp tower.des
+	$(U)lev_comp void.des
 	$(U)lev_comp yendor.des
 	$(U)lev_comp arch.des
 	$(U)lev_comp barb.des
@@ -441,7 +443,6 @@ $(O)sp_lev.tag: $(O)utility.tag $(SPLEVDES)
 	$(U)lev_comp tourist.des
 	$(U)lev_comp valkyrie.des
 	$(U)lev_comp wizard.des
-	$(U)lev_comp void.des
 	cd $(SRC)
 #	-@if exist $(O)sp_lev.tag del $(O)sp_lev.tag
 	@echo sp_levs done >$(O)sp_lev.tag
@@ -964,7 +965,8 @@ nhdat:	$(U)dlb_main.exe $(DAT)\data $(DAT)\oracles $(DAT)\options \
 	echo BIGRM-4.LEV   >>dlb.lst
 	echo BIGRM-5.LEV   >>dlb.lst
 	echo CASTLE.LEV    >>dlb.lst
-	echo VOID.LEV    >>dlb.lst
+	echo STATUARY.LEV  >>dlb.lst
+	echo VOID.LEV      >>dlb.lst
 	echo CAV-FILA.LEV  >>dlb.lst
 	echo CAV-FILB.LEV  >>dlb.lst
 	echo CAV-GOAL.LEV  >>dlb.lst
