--- a/sys/os2/Makefile.os2
+++ b/sys/os2/Makefile.os2
@@ -2,7 +2,7 @@
 #	OS/2 NetHack 3.6 Makefile for OS/2 versions 1.x and 2.x
 #	Copyright (C) 1990, 1991, 1992, 1993, 1996 Timo Hakulinen
 #
-# Edited 2/23/18 by NullCGT
+# Edited 3/1/18 by NullCGT
 #
 #	Several compilers exist for OS/2 but, currently only GCC emx is tested
 #	and used for releases.  make programs other than dmake are not tested.
@@ -526,7 +526,7 @@ SPEC_LEVS = \
  wizard3.lev  astral.lev   air.lev earth.lev    fire.lev     water.lev \
  soko1-1.lev  soko1-2.lev  soko2-1.lev  soko2-2.lev  \
  soko3-1.lev  soko3-2.lev  soko4-1.lev  soko4-2.lev  \
- void.lev
+ void.lev     statuary.lev
 
 QUEST_LEVS = \
  Arc-goal.lev Arc-fila.lev Arc-filb.lev Arc-loca.lev Arc-strt.lev \
@@ -1117,6 +1117,7 @@ dlb_yup : dlb
 	-$(RM) $(GAMEDIR)\bigrm-?.lev
 	-$(RM) $(GAMEDIR)\castle.lev
   -$(RM) $(GAMEDIR)\void.lev
+  -$(RM) $(GAMEDIR)\statuary.lev
 	-$(RM) $(GAMEDIR)\fakewiz?.lev
 	-$(RM) $(GAMEDIR)\juiblex.lev
 	-$(RM) $(GAMEDIR)\knox.lev
@@ -1301,7 +1302,7 @@ XFILES = $(AFILES) $(BFILES) $(CFILES) $(HFILES) $(KFILES) $(MFILES) \
 spec_lev : $(GAMEDIR)\astral.lev $(GAMEDIR)\bigrm-1.lev $(GAMEDIR)\castle.lev \
 	   $(GAMEDIR)\knox.lev $(GAMEDIR)\medusa-1.lev $(GAMEDIR)\minefill.lev \
 	   $(GAMEDIR)\oracle.lev $(GAMEDIR)\tower1.lev $(GAMEDIR)\valley.lev \
-	   $(GAMEDIR)\wizard1.lev $(GAMEDIR)\void.lev \
+	   $(GAMEDIR)\wizard1.lev $(GAMEDIR)\void.lev $(GAMEDIR)\statuary.lev \
      $(GAMEDIR)\soko1-1.lev $(XFILES)
 
 #	Single special level files
@@ -1310,6 +1311,8 @@ $(GAMEDIR)\castle.lev : $(DAT)\castle.des $(TEMP)\lev_comp.exe
 	$(MAKEB) LF=castle do_slev
 $(GAMEDIR)\void.lev : $(DAT)\void.des $(TEMP)\lev_comp.exe
 	$(MAKEB) LF=void do_slev
+$(GAMEDIR)\statuary.lev : $(DAT)\statuary.des $(TEMP)\lev_comp.exe
+	$(MAKEB) LF=statuary do_slev
 $(GAMEDIR)\knox.lev : $(DAT)\knox.des $(TEMP)\lev_comp.exe
 	$(MAKEB) LF=knox do_slev
 $(GAMEDIR)\oracle.lev : $(DAT)\oracle.des $(TEMP)\lev_comp.exe
