--- a/sys/winnt/Makefile.gcc
+++ b/sys/winnt/Makefile.gcc
@@ -1,6 +1,6 @@
 # NetHack 3.6	Makefile.gcc	$NHDT-Date: 1434804544 2015/06/20 12:49:04 $  $NHDT-Branch: win32-x64-working $:$NHDT-Revision: 1.53 $
 #
-# Edited on 2/15/18 by NullCGT
+# Edited on 3/1/18 by NullCGT
 #
 #==============================================================================
 #
@@ -520,7 +520,9 @@ $(O)sp_lev.tag: $(O)utility.tag $(DAT)/bigroom.des  $(DAT)/castle.des \
 	$(subst /,\,$(U)levcomp $(DAT)/medusa.des)
 	$(subst /,\,$(U)levcomp $(DAT)/oracle.des)
 	$(subst /,\,$(U)levcomp $(DAT)/sokoban.des)
+	$(subst /,\,$(U)levcomp $(DAT)/statuary.des)
 	$(subst /,\,$(U)levcomp $(DAT)/tower.des)
+	$(subst /,\,$(U)levcomp $(DAT)/void.des)
 	$(subst /,\,$(U)levcomp $(DAT)/yendor.des)
 	$(subst /,\,$(U)levcomp $(DAT)/arch.des)
 	$(subst /,\,$(U)levcomp $(DAT)/barb.des)
@@ -536,7 +538,6 @@ $(O)sp_lev.tag: $(O)utility.tag $(DAT)/bigroom.des  $(DAT)/castle.des \
 	$(subst /,\,$(U)levcomp $(DAT)/tourist.des)
 	$(subst /,\,$(U)levcomp $(DAT)/valkyrie.des)
 	$(subst /,\,$(U)levcomp $(DAT)/wizard.des)
-	$(subst /,\,$(U)levcomp $(DAT)/void.des)
 	$(subst /,\,copy *.lev $(DAT))
 	$(subst /,\,del *.lev)
 	$(subst /,\,echo sp_levs done > $(O)sp_lev.tag)
@@ -1008,6 +1009,7 @@ spotless: clean
 	$(subst /,\,if exist $(DAT)/baalz.lev    del $(DAT)/baalz.lev)
 	$(subst /,\,if exist $(DAT)/bigrm-*.lev  del $(DAT)/bigrm-*.lev)
 	$(subst /,\,if exist $(DAT)/castle.lev   del $(DAT)/castle.lev)
+	$(subst /,\,if exist $(DAT)/statuary.lev   del $(DAT)/statuary.lev)
 	$(subst /,\,if exist $(DAT)/void.lev   del $(DAT)/void.lev)
 	$(subst /,\,if exist $(DAT)/data    del $(DAT)/data)
 	$(subst /,\,if exist $(DAT)/dungeon      del $(DAT)/dungeon)
